Fixed the overflow error

--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,7 @@
 body {
   background-color: var(--color-darkBrown);
 }
+
+html, body {
+  overflow-x: hidden;
+}
